--- a/package.json
+++ b/package.json
@@ -1,27 +1,26 @@
 {
-  "name": "tdd-kit-javascript-bdd",
+  "name": "tdd-kit-javascript",
   "version": "0.0.1",
   "description": "Javascript BDD base project",
   "private": true,
   "scripts": {
-    "test": "./node_modules/.bin/grunt test"
+    "lint": "eslint .",
+    "cover": "istanbul cover node_modules/.bin/_mocha -- --reporter dot --recursive sources",
+    "test": "mocha --colors --reporter spec --recursive sources"
   },
   "author": "Arpinum",
-  "license": "GNU Lesser General Public License",
-  "repository": "https://github.com/arpinum/tdd-kit.git",
+  "license": "MIT",
+  "repository": "https://github.com/arpinum/tdd-kit-javascript.git",
   "devDependencies": {
-    "chai": "^3.0.0",
-    "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
-    "grunt-shell": "^1.1.2",
-    "istanbul": "^0.3.17",
+    "chai": "^3.4.1",
+    "eslint": "^1.10.1",
+    "istanbul": "^0.4.1",
     "jshint": "^2.8.0",
-    "load-grunt-tasks": "^3.2.0",
-    "mocha": "^2.2.5",
-    "sinon": "^1.15.4",
+    "mocha": "^2.3.4",
+    "sinon": "^1.17.2",
     "sinon-chai": "^2.8.0"
   },
   "dependencies": {
-    "lodash": "^3.10.0"
+    "lodash": "^3.10.1"
   }
 }
