--- a/package.json
+++ b/package.json
@@ -12,15 +12,14 @@
   "license": "MIT",
   "repository": "https://github.com/arpinum/tdd-kit-javascript.git",
   "devDependencies": {
-    "chai": "^3.4.1",
-    "eslint": "^1.10.1",
-    "istanbul": "^0.4.1",
-    "jshint": "^2.8.0",
-    "mocha": "^2.3.4",
-    "sinon": "^1.17.2",
-    "sinon-chai": "^2.8.0"
+    "chai": "3.5.0",
+    "eslint": "3.4.0",
+    "istanbul": "0.4.5",
+    "mocha": "3.0.2",
+    "sinon": "1.17.5",
+    "sinon-chai": "2.8.0"
   },
   "dependencies": {
-    "lodash": "^3.10.1"
+    "lodash": "4.15.0"
   }
 }
