--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,11 @@
     "no-console": 0
   },
   "env": {
-    "node": true
+    "node": true,
+    "es6": true
+  },
+  "parserOptions": {
+    "ecmaVersion": 6
   },
   "globals": {
     "describe": false,
