--- a/package.json
+++ b/package.json
@@ -4,22 +4,25 @@
   "description": "Javascript BDD base project",
   "private": true,
   "scripts": {
-    "lint": "eslint .",
+    "eslint": "eslint .",
+    "mocha": "mocha lib",
     "cover": "istanbul cover node_modules/.bin/_mocha -- --reporter dot --recursive lib",
-    "test": "mocha --colors --reporter spec --recursive lib"
+    "test": "npm run mocha; code=$?; npm run eslint; exit $((${code}+$?))"
   },
   "author": "Arpinum",
   "license": "MIT",
-  "repository": "https://github.com/arpinum/tdd-kit-javascript.git",
+  "repository": "arpinum/tdd-kit-javascript.git",
   "devDependencies": {
     "chai": "3.5.0",
-    "eslint": "3.4.0",
+    "chai-as-promised": "6.0.0",
+    "eslint": "3.8.1",
     "istanbul": "0.4.5",
-    "mocha": "3.0.2",
-    "sinon": "1.17.5",
+    "mocha": "3.1.2",
+    "sinon": "1.17.6",
+    "sinon-as-promised": "4.0.2",
     "sinon-chai": "2.8.0"
   },
   "dependencies": {
-    "lodash": "4.15.0"
+    "lodash": "4.16.4"
   }
 }
