no more chai-as-promised/sinon-chai

--- a/package.json
+++ b/package.json
@@ -14,12 +14,10 @@
   "repository": "arpinum/tdd-kit-javascript.git",
   "devDependencies": {
     "chai": "3.5.0",
-    "chai-as-promised": "6.0.0",
-    "eslint": "3.17.1",
+    "eslint": "^3.18.0",
     "istanbul": "0.4.5",
     "mocha": "3.2.0",
-    "sinon": "1.17.7",
-    "sinon-chai": "2.8.0"
+    "sinon": "^2.1.0"
   },
   "dependencies": {
     "lodash": "4.17.4"
